Prevent skill icons from covering other content

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -38,8 +38,6 @@
 
 .skill:before {
     position: absolute;
-    width: 100%;
-    height: 100%;
 }
 
 .attack:before {
